syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ContentPackageStatus.proto";

message ContentInfo {
	uint32 content_id = 12;
	ContentPackageStatus status = 3;
}
