syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ContentInfo.proto";

message ContentPackageData {
	repeated ContentInfo content_info_list = 9;
	uint32 AGJBMHBMFIM = 10;
}