syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ContentPackageData.proto";

// JCGIEPFFKEG
message ContentPackageSyncDataScNotify {
	ContentPackageData data = 5;
}